--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
    </header>
   <main>
     
-<p>Unjust dismissal is a critical issue that affects many employees in Edmonton, particularly those working in federally regulated industries. It refers to situations where an employee is terminated without just cause, leaving them feeling vulnerable and uncertain about their future. Understanding your rights and the legal framework surrounding unjust dismissal can empower you to take action if you find yourself facing this challenging situation. In this article, we will delve into the definition of <a href="https://abougoushlaw.com/unjust-dismissal-federal/">unjust dismissal</a>, the legal protections available to employees, and the steps you can take if you believe you have been unjustly dismissed.</p> 
+<p>Unjust dismissal is a critical issue that affects many employees in Edmonton, particularly those working in federally regulated industries. It refers to situations where an employee is terminated without just cause, leaving them feeling vulnerable and uncertain about their future. Understanding your rights and the legal framework surrounding unjust dismissal can empower you to take action if you find yourself facing this challenging situation. In this article, we will delve into the definition of unjust dismissal, the legal protections available to employees, and the steps you can take if you believe you have been unjustly dismissed.</p> 
+   <p>For more information, related to unjust dismissal visit <a href="https://abougoushlaw.com/">edmonton employment law firm</p>
    
 <div style="text-align: center;">
  <img src="https://i.postimg.cc/XYLRPP0d/law-4.jpg" alt="law.jpg" style="max-width: 100%; height: auto;">
